// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckableCard is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiCheckableCard testClass1 testClass2 emotion-euiPanel-m-plain-hasBorder-euiSplitPanelOuter-row-euiCheckableCard-euiTestCss"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable-euiSplitPanelInner"
  >
    <div
      aria-label="aria-label"
      class="euiRadio emotion-euiRadio"
      data-test-subj="test subject string"
    >
      <div
        class="euiRadio__circle emotion-euiRadio__circle-unselected"
      >
        <span
          class="emotion-euiRadio__icon"
          data-euiicon-type="empty"
        />
        <input
          class="euiRadio__input emotion-euiRadio__input"
          id="id"
          type="radio"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent-euiSplitPanelInner"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders a checkbox when specified 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiCheckableCard testClass1 testClass2 emotion-euiPanel-m-plain-hasBorder-euiSplitPanelOuter-row-euiCheckableCard-euiTestCss"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable-euiSplitPanelInner"
  >
    <div
      class="euiCheckbox emotion-euiCheckbox"
    >
      <div
        class="euiCheckbox__square emotion-euiCheckbox__square-unselected"
      >
        <span
          class="emotion-euiCheckbox__icon-check"
          data-euiicon-type="empty"
        />
        <input
          aria-label="aria-label"
          class="euiCheckbox__input emotion-euiCheckbox__input"
          data-test-subj="test subject string"
          id="id"
          type="checkbox"
        />
      </div>
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent-euiSplitPanelInner"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders children 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiCheckableCard emotion-euiPanel-m-plain-hasBorder-euiSplitPanelOuter-row-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable-euiSplitPanelInner"
  >
    <div
      class="euiRadio emotion-euiRadio"
    >
      <div
        class="euiRadio__circle emotion-euiRadio__circle-unselected"
      >
        <span
          class="emotion-euiRadio__icon"
          data-euiicon-type="empty"
        />
        <input
          class="euiRadio__input emotion-euiRadio__input"
          id="id"
          type="radio"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent-euiSplitPanelInner"
  >
    <label
      aria-describedby="id-details"
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
    <div
      class="euiCheckableCard__children emotion-euiCheckableCard__children"
      id="id-details"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCheckableCard renders disabled 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiCheckableCard emotion-euiPanel-m-plain-hasBorder-euiSplitPanelOuter-row-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-euiSplitPanelInner"
  >
    <div
      class="euiRadio emotion-euiRadio"
    >
      <div
        class="euiRadio__circle emotion-euiRadio__circle-disabled-unselected"
      >
        <span
          class="emotion-euiRadio__icon"
          data-euiicon-type="empty"
        />
        <input
          class="euiRadio__input emotion-euiRadio__input"
          disabled=""
          id="id"
          type="radio"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent-euiSplitPanelInner"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label-isDisabled"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`EuiCheckableCard renders panel props 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiCheckableCard emotion-euiPanel-m-plain-hasShadow-euiSplitPanelOuter-row-euiCheckableCard"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-none-m-subdued-isClickable-euiSplitPanelInner"
  >
    <div
      class="euiRadio emotion-euiRadio"
    >
      <div
        class="euiRadio__circle emotion-euiRadio__circle-unselected"
      >
        <span
          class="emotion-euiRadio__icon"
          data-euiicon-type="empty"
        />
        <input
          class="euiRadio__input emotion-euiRadio__input"
          id="id"
          type="radio"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent-euiSplitPanelInner"
  >
    <label
      class="euiCheckableCard__label emotion-euiCheckableCard__label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;
